mise à jour du formulaire de recherche

--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -104,8 +104,8 @@
                             multiple: true,
                             placeholder: "Sélectionner",
                             optionsSelectedText: "options sélectionnées",
+                            disableSelectAll: true,
                             allOptionsSelectedText: "Toutes les options",
-                            selectAllText: "Tout sélectionner",
                         });
                     </script>
 
