--- a/templates/conventions/avenant/search_for_avenant.html
+++ b/templates/conventions/avenant/search_for_avenant.html
@@ -4,9 +4,11 @@
 
 {% load static %}
 
+{% load waffle_tags %}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% if search_form %}
+        {% if conventions|length == 0 %}
             {# Recherche d'avenant en cours #}
             <div class="fr-container">
                 <div class="fr-grid-row fr-grid-row--gutters">
@@ -31,56 +33,64 @@
                                 <button class="fr-btn" title="Rechercher" id="search_btn">Etape suivante
                                     <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
                                 </button>
+                                {% if conventions is not None %}
+                                    <div class="fr-mt-3w">
+                                        <p>Aucune convention ne correspond aux informations fournies.</p>
+                                        {% flag "ajout_convention" %}
+                                            <p>Si la convention n'existe pas encore dans APiLos, vous pouvez procéder à son ajout.</p>
+                                            <div>
+                                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary fr-mr-2w" href="{% url 'conventions:from_operation_select' %}">
+                                                    Ajouter une convention existante dans le SIAP / Apilos
+                                                </a>
+                                            </div>
+                                        {% endflag %}
+                                    </div>
+                                {% endif %}
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         {% else %}
-
             {# Recherche d'avenant soumise et valide #}
             <div class="fr-container fr-my-5w">
                 <div class="fr-col-12 fr-col-lg-6">
-                    {% if conventions|length > 0 %}
-                        <h2>Confirmez votre choix</h2>
-                        <p>Vous allez créer un avenant pour la convention suivante.</p>
-                        {% for convention in conventions %}
-                            <div class="fr-card fr-card--no-arrow fr-p-4w fr-mb-3w">
-                                <div class="fr-grid-row">
-                                    <div class="fr-col-1 fr-my-auto"><span class="fr-icon-success-line apilos-icon-success fr-icon--lg" aria-hidden="true"></span></div>
-                                    <div class="fr-col-7 fr-pr-1w">
-                                        <div class="fr-mb-1w fr-text--bold apilos-overflow-hidden">
-                                            {{convention.programme.nom}}
-                                        </div>
-                                        {{convention.programme.ville}} - <strong>{{ convention.lot.financement|default_if_none:'' }}</strong>
+                    <h2>Confirmez votre choix</h2>
+                    <p>Vous allez créer un avenant pour la convention suivante.</p>
+                    {% for convention in conventions %}
+                        <div class="fr-card fr-card--no-arrow fr-p-4w fr-mb-3w">
+                            <div class="fr-grid-row">
+                                <div class="fr-col-1 fr-my-auto"><span class="fr-icon-success-line apilos-icon-success fr-icon--lg" aria-hidden="true"></span></div>
+                                <div class="fr-col-7 fr-pr-1w">
+                                    <div class="fr-mb-1w fr-text--bold apilos-overflow-hidden">
+                                        {{convention.programme.nom}}
                                     </div>
-                                    <div class="fr-col-4 apilos-text--italic">
-                                        {{convention.numero}}
-                                    </div>
+                                    {{convention.programme.ville}} - <strong>{{ convention.lot.financement|default_if_none:'' }}</strong>
+                                </div>
+                                <div class="fr-col-4 apilos-text--italic">
+                                    {{convention.numero}}
                                 </div>
                             </div>
-                            <div class="fr-grid-row">
-                                {% if convention|display_create_avenant %}
-                                    <div class="fr-col-12 fr-col-lg-6">
-                                        <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant
-                                            <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span></a>
-                                    </div>
-                                {% else %}
-                                    <div class="fr-col-12 fr-col-lg-6">
-                                        <button class="fr-btn" disabled> Un avenant est déjà en cours.</button>
-                                        <div>
-                                            <a class="fr-link fr-text--sm fr-mb-5w fr-mt-1w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
-                                        </div>
-                                    </div>
-                                {% endif %}
-                            </div>
-                        {% endfor %}
-                        <div class="fr-col-12 fr-col-lg-6 fr-mt-2w">
-                            <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
                         </div>
-                    {% else %}
-                        {% include "conventions/avenant/new_convention_for_avenant.html" %}
-                    {% endif %}
+                        <div class="fr-grid-row">
+                            {% if convention|display_create_avenant %}
+                                <div class="fr-col-12 fr-col-lg-6">
+                                    <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant
+                                        <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span></a>
+                                </div>
+                            {% else %}
+                                <div class="fr-col-12 fr-col-lg-6">
+                                    <button class="fr-btn" disabled> Un avenant est déjà en cours.</button>
+                                    <div>
+                                        <a class="fr-link fr-text--sm fr-mb-5w fr-mt-1w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+                    <div class="fr-col-12 fr-col-lg-6 fr-mt-2w">
+                        <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
+                    </div>
 
         {% endif %}
     </div>
