--- a/templates/conventions/from_operation/add_avenants.html
+++ b/templates/conventions/from_operation/add_avenants.html
@@ -4,46 +4,105 @@
 
 {% block page_title %}Ajout de convention simplifié - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static 'virtual-select/virtual-select.min.css' %}">
+{% endblock %}
+
 {% block content %}
 
     <div class="fr-container fr-my-5w">
-        <h3>Ajouter des avenants existants</h3>
+        <h3>Ajouter une convention existante</h3>
 
         {% include "./stepper.html"%}
 
-        <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-8">
-                <h6>Avez-vous un ou plusieurs avenants à associer à cette convention ?</h6>
+        {% if avenants %}
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-8">
+                    <h6>Avenants associés à cette convention</h6>
+                    <ul>
+                        {% for avenant in avenants %}
+                            <li>Avenant {{ avenant.numero }} : {{ avenant }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
-            <div class="fr-col-3 fr-mr-4w">
-                <a href="{% url 'conventions:post_action' convention_uuid=convention_uuid %}" class="fr-link">Passer cette étape</a>
-            </div>
-        </div>
+        {% endif %}
 
         <form method="post" action="" enctype="multipart/form-data">
             {% csrf_token %}
 
-            {{ formset.management_form }}
-
-            <div class="fr-grid-row fr-grid-row--gutters">
-                {% for form in formset %}
-                    {% if form.uuid.value %}
-                        {{ form.as_hidden }}
-                        <div class="fr-col-12 fr-mt-4">
-                            FIXME - L'avenant numéro {{ form.numero.value }} de type '{{ form.avenant_type.value }}' a été créé
-                            <hr>
-                        </div>
+            <div class="fr-grid-row fr-grid-row--gutters fr-mt-4w">
+                <div class="fr-col-8">
+                    {% if avenants %}
+                        <h6>Avez-vous un autre avenant à associer à cette convention ?</h6>
                     {% else %}
-                        {% include "conventions/from_operation/add_avenants_form.html" with form=form %}
+                        <h6>Avez-vous un avenant à associer à cette convention ?</h6>
                     {% endif %}
-                {% endfor %}
-            </div>
+                </div>
 
-            <div class="form-button-footer fr-py-5w">
-                <button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right" name="action" value="submit" type="submit">
-                    Enregistrer
-                </button>
+                {% for error in form.non_field_errors %}
+                    <p id="text-input-error-desc-error" class="fr-error-text fr-mb-4w">
+                        {{ error }}
+                    </p>
+                {% endfor %}
+
+                <div class="fr-col-6">
+                    {% include "common/form/input_text.html" with form_input=form.numero mandatory_input=True editable=True %}
+                </div>
+                <div class="fr-col-6">
+                    {% include "common/form/input_number.html" with form_input=form.annee_signature mandatory_input=True editable=True %}
+                </div>
+                <div class="fr-col-6">
+                    {% url 'users:search_bailleur' as search_bailleur_url %}
+                    {% include "common/form/input_search_select.html" with form_input=form.bailleur url=search_bailleur_url editable=True %}
+                </div>
+                <div class="fr-col-6">
+                    {% include "common/form/input_number.html" with form_input=form.nb_logements editable=True %}
+                </div>
+                <div class="fr-col-12">
+                    {% include "common/form/input_textarea.html" with form_input=form.champ_libre_avenant editable=True %}
+                </div>
+                <div class="fr-col-6">
+                    <div class="fr-upload-group {% if form.nom_fichier_signe.errors %}fr-select-group--error{% endif %}" id="{{form.nom_fichier_signe.id_for_label}}_group">
+                        <label class="fr-label" for="file-upload">Déposer l'avenant (en PDF)
+                            <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
+                        </label>
+                        <input
+                            class="fr-upload {% if form.nom_fichier_signe.errors %}fr-input--error{% endif %}"
+                            type="file"
+                            id="file-upload"
+                            name="{{form.nom_fichier_signe.html_name}}"
+                            accept="application/pdf"
+                        >
+                    </div>
+                </div>
+                <div class="fr-col-6">
+                    <div class="form-button-footer fr-pt-4w">
+                        <button class="fr-btn fr-icon-add-circle-line fr-btn--icon-left fr-btn--secondary" name="action" value="submit" type="submit">
+                            Ajouter cet avenant
+                        </button>
+                    </div>
+                </div>
             </div>
         </form>
+
+        <div class="fr-grid-row fr-grid-row--gutters fr-mt-4w">
+            <div class="fr-col-12">
+                <div class="block--row-strech-1">
+                </div>
+                <div class="form-button-footer">
+                    <a href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}" class="fr-link">
+                        <button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right" name="action">
+                            Passer cette étape
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock%}
