--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -261,7 +261,7 @@
                                     {% endflag %}
                                     {% if siap_assistance_url %}
                                         <div class="">
-                                            <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary" href="{{ siap_assistance_url }}" target="_blank">
+                                            <a class="fr-btn fr-icon-mail-line fr-btn--icon-left fr-btn--tertiary" href="{{ siap_assistance_url }}" target="_blank"  rel="noopener">
                                                 Contactez l'assistance
                                             </a>
                                         </div>
