--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,7 +104,7 @@
   display: inline-block;
   -webkit-mask-size: 100% 100%;
   mask-size: 100% 100%;
-  margin-left: 0.5rem;;
+  margin-left: 0.5rem;
 }
 
 #search_table select option[value=""],
