--- a/templates/conventions/avenant/new_convention_for_avenant.html
+++ b/templates/conventions/avenant/new_convention_for_avenant.html
@@ -16,6 +16,7 @@
     {% csrf_token %}
     <div class="fr-col-12">
         <div class="fr-mb-3w">
+            {% url 'users:search_bailleur' as search_bailleur_url %}
             {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
             <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 document.addEventListener('DOMContentLoaded', function () {
@@ -25,7 +26,13 @@
                         hideClearButton: true,
                         search: true,
                         searchPlaceholderText: "Rechercher votre bailleur...",
-                        noSearchResultsText: "Aucun bailleur ne correspond à votre recherche"
+                        noSearchResultsText: "Aucun bailleur ne correspond à votre recherche",
+                        onServerSearch: function (search, select) {
+                            fetch('{{ search_bailleur_url }}?q=' + search)
+                                .then((response) => response.json())
+                                .then(data => select.setServerOptions(data));
+                        },
+
                     });
                 });
             </script>
