--- a/templates/conventions/home/statut_tag.html
+++ b/templates/conventions/home/statut_tag.html
@@ -1,3 +1,3 @@
 <div class="apilos-badge">
-    <div class="fr-badge apilos-badge-{{convention.statut_for_template.key_statut}} fr-icon-{{convention.statut_icone}}-fill fr-badge--icon-{{convention.statut_icone}}">{{convention.short_statut_neutre}}</div>
+    <div class="fr-badge apilos-badge-{{convention.statut_for_template.key_statut}} fr-icon-{{convention.statut_icone}}-fill fr-badge--icon-{{convention.statut_icone}} fr-text--xs">{{convention.short_statut_neutre}}</div>
 </div>
