--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -11,7 +11,7 @@
 {% block content %}
     {% with programme_uuid=convention.programme.uuid|slugify convention_uuid=convention.uuid|slugify lot_uuid=convention.lot.uuid|slugify ecolo_ref=convention.ecolo_reference %}
         <input type="hidden" id="convention_uuid" value="{{ convention.uuid }}">
-        <div class="fr-container-fluid ds_banner">
+        <div class="fr-container-fluid ds_banner recapitulatif">
             {% include "conventions/common/form_header.html" %}
             {% include "common/nav_bar.html"  with nav_bar_step="recapitulatif" %}
             <div class="fr-container fr-mt-5w">
