gestion des cas de dénonciation, résiliation + bandeau mode expert

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -710,6 +710,7 @@ table.fullwidth {
 .apilos-link {
   display: inline !important;
   text-decoration: none !important;
+  background-image: none;
 }
 /*  */
 .apilos-multiselect {
