--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -1,6 +1,7 @@
 {% extends "layout/base.html" %}
 {% block page_title %}Recapitulatif - APiLos{% endblock %}
 {% load static %}
+{% load display_filters %}
 {% load custom_filters %}
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
@@ -15,6 +16,11 @@
             {% include "conventions/common/form_header.html" %}
             {% include "common/nav_bar.html"  with nav_bar_step="recapitulatif" %}
             <div class="fr-container fr-mt-5w">
+                {% if convention.statut == CONVENTION_STATUT.SIGNEE %}
+                    <div class="fr-px-2w">
+                        Convention n°<strong>{{ convention.numero|default_if_none:'-' }}</strong> signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v">{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</span>
+                    </div>
+                {% endif %}
                 {% csrf_token %}
                 {% if not convention.is_avenant %}
                     {% include "conventions/recapitulatif/alert_convention.html" %}
