--- a/templates/conventions/from_operation/select_operation_list.html
+++ b/templates/conventions/from_operation/select_operation_list.html
@@ -113,7 +113,7 @@
         rows.forEach(row => {
             numero = row.children[0].textContent
             row.addEventListener("click", () => {
-                window.location = "add_convention/" + encodeURIComponent(numero)
+                window.location = "from_operation/add_convention/" + encodeURIComponent(numero)
             })
         });
     </script>
