--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -44,7 +44,7 @@
         <!-- Matomo -->
 
         {% if ENVIRONMENT == "production" %}
-            <script>
+            <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 var _paq = window._paq = window._paq || [];
                 /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
                 _paq.push(['trackPageView']);
