--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -43,7 +43,6 @@
 
         <!-- Matomo -->
         {% if ENVIRONMENT == "production" %}
-            <script src="https://stats.beta.gouv.fr/matomo.js" async nonce="{{request.csp_nonce}}"></script>
             <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 var _paq = window._paq = window._paq || [];
                 _paq.push(['trackPageView']);
@@ -52,6 +51,9 @@
                     var u="https://stats.beta.gouv.fr/";
                     _paq.push(['setTrackerUrl', u+'matomo.php']);
                     _paq.push(['setSiteId', '100']);
+
+                    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
                 })();
             </script>
         {% endif %}
