--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -2,7 +2,7 @@
 
 {% if form_step and form_step.total > 1 %}
     <div class="fr-container">
-        <div class="fr-stepper">
+        <div class="fr-stepper fr-mt-2w">
             <h2 class="fr-stepper__title">
                 <span class="fr-stepper__state">Étape {{form_step.number}} sur {{form_step.total}}</span>
                 {{form_step.title}}
