--- a/templates/conventions/_partial/create_action.html
+++ b/templates/conventions/_partial/create_action.html
@@ -1,5 +1,5 @@
 <div class="fr-mr-3w">
-    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary" href="{% url 'conventions:new_convention' %}">
+    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary" href="{% url 'conventions:new_convention_anru' %}">
         Créer une convention ANRU
     </a>
 </div>
