Mise au propre de la page "sent" + ajout de précision SPF pour le retour à l'nstruction (issue S1122) + fix pour le bug d'affichage sticky

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,7 +37,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.apilos--overflow_ellipsis:hover {
+.apilos--container_ellipsis .apilos--overflow_ellipsis:hover {
   overflow: visible;
   position: absolute;
   width: auto;
