--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -11,7 +11,7 @@
                 </p>
                 <p>
                     {{convention|display_kind_with_demonstratif}} est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà signé{{convention|display_gender_terminaison}}{% endif %}. Cependant,
-                    s'il reste des modifications à apporter, vous avez la possibilité de {{convention|display_pronom}} repasser en statut "A instruire"
+                    s'il reste des modifications à apporter, en cas de refus du Service de la publicité foncière par exemple, vous avez la possibilité de {{convention|display_pronom}} repasser en statut "A instruire"
                     en cliquant sur le bouton ci-dessous
                 </p>
                 <p>
