s1125 - lien vers la doc sur la mixité sociale

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,7 +65,10 @@
   right: 0;
   z-index: 1;
 }
-
+.insert-info {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
 .fr-icon--xxl {
   --icon-size: 4rem;
 }
